Updated Three.js project and styling improvements

--- a/public/choi.html
+++ b/public/choi.html
@@ -58,11 +58,52 @@
                                 <section class="section" id="galaxy">
                                     <canvas class="webgl"></canvas>
                                     <canvas class="webgl-secondary"></canvas>
-                                    <div class="about-content">
-
-                                      </div>
-                                </section>
-
+                            <div class="about-content">
+                        </div>
+                </section>
+                <section id="work-intro" class="section">
+                    <div class="works-container">
+                        <h1 style="font-size: 3rem; font-family: Merriweather; text-align: center; opacity: 0.95; margin-top: 48rem;">
+                            Step into My Digital Universe &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Where Creativity Meets Code
+                        </h1> 
+                        <p></p>
+                    </div>
+                </section><br>
+                <section id="works-1" class="section">
+                    <div class="works-container">
+                        <h1 style="font-size: 3rem; font-family: Merriweather; text-align: center; opacity: 0.95;">
+                            #1 Solar System
+                        </h1>
+                            <div class="work-item" style="display: flex; align-items: center;">
+                                <!-- Clickable Image -->
+                                <a href="https://solarsystem-rosy.vercel.app/" target="_blank">
+                                    <img src="images/work1.png" alt="Project 1" style="width: 40%; border-radius: 15px; cursor: pointer;" >
+                                </a>
+                            <div class="work-info">
+                        <h2 style="font-size: 2rem;">Solar System</h2>
+                            <p style="font-size: 1.9rem; opacity: 0.9; text-align: center;" >
+                                Interactive 3D Solar System built with Three.js,<br> bringing the wonders of space to life with smooth animations and dynamic orbits.
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            <!-- Works Section 2 -->
+                <section id="works-2" class="section">
+                    <div class="works-container">
+                        <h1 style="font-size: 3rem; font-family: Merriweather; text-align: center; opacity: 0.95;">
+                            Featured Work #2
+                                </h1>
+                            <div class="work-item" style="display: flex; align-items: center; gap: 2rem;">
+                            <div class="work-info">
+                                <h2 style="font-size: 2rem;">Project Title 2</h2>
+                                    <p style="font-size: 1.5rem; opacity: 0.8;">Another description for a different project. This could be an animation, website, or any visual experience.</p>
+                                        <a href="https://yourprojectlink.com" target="_blank" style="font-size: 1.5rem; color: #ff6030;">View Project</a>
+                                        </div>
+                                        <img src="images/work2.png" alt="Project 2" style="width: 50%; border-radius: 15px;">
+                                    </div>
+                                </div>
+                </section>
             </main>
             <!-- Footer -->
             <footer>
@@ -76,3 +117,4 @@
     <script type="module" src="js/model.js"></script>
 </body>
 </html>
+
