--- a/public/choi.html
+++ b/public/choi.html
@@ -75,7 +75,7 @@
                     <div class="works-container" style="width: 100%; display: flex; justify-content: flex-end; padding-right: 16rem;">
                         <div style="display: flex; flex-direction: column; align-items: flex-end; max-width: 60rem;">
                     <!-- Text Block -->
-                        <div class="work-info" style="text-align: left; margin-bottom: 2rem;">
+                        <div class="work-info" style="text-align: left; margin-bottom: 4rem;">
                             <h2 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 4rem; color: #ff6030;">
                                 Solar System
                         </h2>
@@ -94,14 +94,14 @@
 
         <!-- Works Section 2 -->
     <section id="works-2" class="section">
-        <div class="works-container" style="width: 100%; display: flex; justify-content: flex-start; padding-left: 5rem;">
+        <div class="works-container" style="width: 100%; display: flex; text-align: right; justify-content: flex-start; padding-left: 5rem;">
             <div style="display: flex; flex-direction: column; align-items: flex-start; max-width: 60rem;">
                 <!-- Title -->
-                <h1 style="font-size: 3rem; font-family: Merriweather; text-align: left; opacity: 0.95;">
+                <h1 style="font-size: 3rem; font-family: Merriweather; text-align: right; opacity: 0.95;">
                     Choi Achive
                 </h1>
                 <!-- Text Block -->
-            <div class="work-info" style="text-align: left; margin-bottom: 2rem;">
+            <div class="work-info" style="text-align: right; margin-bottom: 10rem;">
                 <h2 style="font-size: 2rem;"></h2>
                     <p style="font-size: 2.5rem; opacity: 0.7;">
                         Another description for a different project. This could be an animation, website, or any visual experience.
