adding text and css for workpage

--- a/public/choi.html
+++ b/public/choi.html
@@ -76,9 +76,16 @@
                         <div style="display: flex; flex-direction: column; align-items: flex-end; max-width: 60rem;">
                     <!-- Text Block -->
                         <div class="work-info" style="text-align: left; margin-bottom: 4rem;">
-                            <h2 style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: 4rem; color: #ff6030;">
+                            <h1 style="
+                                font-size: 3rem;
+                                font-family: Merriweather;
+                                text-align: left;
+                                width: 100%;
+                                color: #ff4500;
+                                text-shadow: 0 0 8px rgba(255, 69, 0, 0.6), 0 0 12px rgba(255, 69, 0, 0.3);
+                                ">
                                 Solar System
-                        </h2>
+                            </h1>
                         <p style="font-size: 2.5rem; opacity: 0.7;">
                             Interactive 3D Solar System built with Three.js,<br />
                             bringing the wonders of space to life with smooth animations and dynamic orbits.
@@ -93,37 +100,41 @@
             </section>
 
         <!-- Works Section 2 -->
-    <section id="works-2" class="section">
-        <div class="works-container" style="width: 100%; display: flex; text-align: right; justify-content: flex-start; padding-left: 5rem;">
-            <div style="display: flex; flex-direction: column; align-items: flex-start; max-width: 60rem;">
+        <section id="works-2" class="section">
+            <div class="works-container" style="width: 100%; display: flex; justify-content: flex-start; padding-left: 15rem;">
+                <div style="display: flex; flex-direction: column; align-items: flex-end; max-width: 60rem; width: 100%; text-align: right;">
                 <!-- Title -->
-                <h1 style="font-size: 3rem; font-family: Merriweather; text-align: right; opacity: 0.95;">
-                    Choi Achive
+                <h1 style="
+                    font-size: 3rem;
+                    font-family: Merriweather;
+                    width: 100%;
+                    color: #00ffff;
+                    text-shadow: 0 0 8px rgba(0, 255, 255, 0.6), 0 0 12px rgba(0, 255, 255, 0.3);
+                ">
+                    Choi Archive
                 </h1>
                 <!-- Text Block -->
-            <div class="work-info" style="text-align: right; margin-bottom: 10rem;">
-                <h2 style="font-size: 2rem;"></h2>
-                    <p style="font-size: 2.5rem; opacity: 0.7;">
-                        Another description for a different project. This could be an animation, website, or any visual experience.
-                    </p>
-                <a href="https://github.com/Javvvvvvvvvvvva/Choi_Achive" target="_blank" style="font-size: 1.5rem; color: 0x00ffff;">
-                    <img src="images/work2.png" alt="Project 2" style="width: 100%; border-radius: 15px;" />
-                </a>
+                <div class="work-info" style="width: 100%; margin-bottom: 10rem;">
+                  <p style="font-size: 2.5rem; opacity: 0.7;">
+                    A cyberpunk-inspired digital archive. Featuring interactive elements, simulated terminals, and real-time JavaScript effects in a futuristic interface.
+                  </p>
+                  <a href="https://github.com/Javvvvvvvvvvvva/Choi_Achive" target="_blank" style="font-size: 1.5rem; color: #00ffff;">
+                    <img src="images/work2.png" alt="Choi Archive Project" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
+                  </a>
+                </div>
+              </div>
             </div>
-      </div>
-    </div>
-  </section>
-  
-      <!-- Footer -->
-      <footer>
+          </section>
+    <!-- Footer -->
+    <footer>
         <div class="f_inner">
-          <p>&copy; 2024 Yoonseo Choi</p>
-          <a class="rolling-text" href="/profile.html">PROFILE</a>
+        <p>&copy; 2024 Yoonseo Choi</p>
+        <a class="rolling-text" href="/profile.html">PROFILE</a>
         </div>
-      </footer>
+    </footer>
     </div>
-  </div>
+</div>
 
-  <script type="module" src="js/model.js"></script>
+<script type="module" src="js/model.js"></script>
 </body>
 </html>
