--- a/public/profile.html
+++ b/public/profile.html
@@ -61,7 +61,7 @@
                                     <canvas class="webgl"></canvas>
                                     <div class="about-content">
                                       <h1 style="font-size: 5rem; font-family: Merriweather; opacity: 0.95;" 
-                                      class="three-d-text">Welcome to my Protfolio</h1>
+                                      class="three-d-text">Welcome to my Portfolio</h1>
 
                                       <p style="font-size: 3rem; font-family: Poppins; text-align: center; opacity: 0.76;">
                                         <br>I'm a 3D Web Developer passionate about creating immersive digital experiences.<br>
