--- a/public/choi.html
+++ b/public/choi.html
@@ -61,7 +61,6 @@
                     <canvas class="webgl-secondary"></canvas>
                     <div class="about-content"></div>
                 </section>
-
                 <section id="work-intro" class="section">
                     <div class="works-container" style="width: 100%; display: flex; justify-content: flex-end;">
                     <h1 style="font-size: 3rem; font-family: Merriweather; text-align: center; opacity: 0.95; margin-top: 48rem; text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.7);">
@@ -125,6 +124,35 @@
               </div>
             </div>
           </section>
+
+                <!-- Works Section 3 -->
+                <section id="works-3" class="section">
+                    <div class="works-container" style="width: 100%; display: flex; justify-content: flex-end; padding-right: 16rem;">
+                        <div style="display: flex; flex-direction: column; align-items: flex-end; max-width: 60rem;">
+                    <!-- Text Block -->
+                        <div class="work-info" style="text-align: left; margin-bottom: 4rem;">
+                            <h1 style="
+                                font-size: 3rem;
+                                font-family: Merriweather;
+                                text-align: left;
+                                width: 100%;
+                                color: #adacac;
+                                text-shadow: 0 0 8px rgb(255, 255, 255), 0 0 12px rgba(59, 58, 58, 0.3);
+                                ">
+                                Non code three.js builder
+                            </h1>
+                        <p style="font-size: 2.5rem; opacity: 0.7;">
+                            Developed a no-code web tool for visually creating 3D shapes using Three.js,<br />
+                            Implemented download/export system to generate standalone HTML scenes
+                        </p>
+                    </div>
+                <!-- Image Block -->
+                    <a href="https://noncoderthree-js.vercel.app/" target="_blank">
+                        <img src="images/work3.png" alt="Project 3" style="width: 100%; border-radius: 20px; cursor: pointer;" />
+                    </a>
+                    </div>
+                </div>
+            </section>
     <!-- Footer -->
     <footer>
         <div class="f_inner">
