--- a/public/choi.html
+++ b/public/choi.html
@@ -142,12 +142,12 @@
                                 Non code three.js builder
                             </h1>
                         <p style="font-size: 2.5rem; opacity: 0.7;">
-                            Developed a no-code web tool for visually creating 3D shapes using Three.js,<br />
+                            Developed a no-code web tool for visually creating 3D shapes using Three.js in react,<br />
                             Implemented download/export system to generate standalone HTML scenes
                         </p>
                     </div>
                 <!-- Image Block -->
-                    <a href="https://noncoderthree-js.vercel.app/" target="_blank">
+                    <a href="https://react-builder-sepia.vercel.app/" target="_blank">
                         <img src="images/work3.png" alt="Project 3" style="width: 100%; border-radius: 20px; cursor: pointer;" />
                     </a>
                     </div>
