change code, add new project

--- a/public/choi.html
+++ b/public/choi.html
@@ -110,15 +110,15 @@
                     color: #00ffff;
                     text-shadow: 0 0 8px rgba(0, 255, 255, 0.6), 0 0 12px rgba(0, 255, 255, 0.3);
                 ">
-                    Choi Archive
+                    Discord Graph Visualizer
                 </h1>
                 <!-- Text Block -->
                 <div class="work-info" style="width: 100%; margin-bottom: 10rem;">
                   <p style="font-size: 2.5rem; opacity: 0.7;">
-                    A cyberpunk-inspired digital archive. Featuring interactive elements, simulated terminals, and real-time JavaScript effects in a futuristic interface.
+                     A real-time 3D graph that visualizes user mentions in Discord using Three.js and d3-force-3d.
                   </p>
-                  <a href="https://github.com/Javvvvvvvvvvvva/Choi_Achive" target="_blank" style="font-size: 1.5rem; color: #00ffff;">
-                    <img src="images/work2.png" alt="Choi Archive Project" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
+                  <a href="https://discord-graph-visualizer-8dkk.vercel.app/" target="_blank" style="font-size: 1.5rem; color: #00ffff;">
+                    <img src="images/work2.png" alt="Discord Graph Visualizer" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
                   </a>
                 </div>
               </div>
