--- a/public/choi.html
+++ b/public/choi.html
@@ -83,7 +83,7 @@
                                 color: #ff4500;
                                 text-shadow: 0 0 8px rgba(255, 69, 0, 0.6), 0 0 12px rgba(255, 69, 0, 0.3);
                                 ">
-                                Solar System
+                                New Solar System
                             </h1>
                         <p style="font-size: 2.5rem; opacity: 0.7;">
                             Interactive 3D Solar System built with Three.js,<br />
@@ -91,7 +91,7 @@
                         </p>
                     </div>
                 <!-- Image Block -->
-                    <a href="https://solarsystem-rosy.vercel.app/" target="_blank">
+                    <a href="https://renewal-solar-system.vercel.app/" target="_blank">
                         <img src="images/work1.png" alt="Project 1" style="width: 100%; border-radius: 20px; cursor: pointer;" />
                     </a>
                     </div>
