--- a/public/choi.html
+++ b/public/choi.html
@@ -110,15 +110,15 @@
                     color: #00ffff;
                     text-shadow: 0 0 8px rgba(0, 255, 255, 0.6), 0 0 12px rgba(0, 255, 255, 0.3);
                 ">
-                    Discord Graph Visualizer
+                    Choi_Achive
                 </h1>
                 <!-- Text Block -->
                 <div class="work-info" style="width: 100%; margin-bottom: 10rem;">
                   <p style="font-size: 2.5rem; opacity: 0.7;">
-                     A real-time 3D graph that visualizes user mentions in Discord using Three.js and d3-force-3d.
+                     A personal archive of my work—complete with interactive 3D models built with Three.js
                   </p>
-                  <a href="https://discord-graph-visualizer-8dkk.vercel.app/" target="_blank" style="font-size: 1.5rem; color: #00ffff;">
-                    <img src="images/work2.png" alt="Discord Graph Visualizer" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
+                  <a href="https://choi-achive.vercel.app/" target="_blank" style="font-size: 1.5rem; color: #00ffff;">
+                    <img src="images/work2.png" alt="Choi_Achive" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
                   </a>
                 </div>
               </div>
