--- a/public/choi.html
+++ b/public/choi.html
@@ -153,6 +153,38 @@
                     </div>
                 </div>
             </section>
+<!-- Works Section 4 -->
+<section id="works-4" class="section">
+  <div class="works-container" style="width: 100%; display: flex; justify-content: flex-start; padding-left: 15rem;">
+    <div style="display: flex; flex-direction: column; align-items: flex-end; max-width: 60rem; width: 100%; text-align: right;">
+
+      <!-- Title -->
+      <h1 style="
+        font-size: 3rem;
+        font-family: Merriweather;
+        width: 100%;
+        color: #ff6ad5;
+        text-shadow: 0 0 8px rgba(255, 106, 213, 0.6), 0 0 12px rgba(255, 106, 213, 0.3);
+      ">
+        SnapResume
+      </h1>
+
+      <!-- Text Block -->
+      <div class="work-info" style="width: 100%; margin-bottom: 10rem;">
+        <p style="font-size: 2.5rem; opacity: 0.7;">
+          A fast resume builder that turns your portfolio highlights into a clean, ATS-friendly PDF in seconds.
+        </p>
+
+        <!-- Image / Link -->
+        <a href="https://snapresume-five.vercel.app/" target="_blank" style="font-size: 1.5rem; color: #ff6ad5;">
+          <img src="images/work4.png" alt="SnapResume — Instant ATS-friendly resume builder" style="width: 100%; border-radius: 15px; margin-top: 2rem;" />
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
     <!-- Footer -->
     <footer>
         <div class="f_inner">
